rust/cudf-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

use crate::cudaStream_t;

#[repr(u32)]
#[doc = " An enum denoting error statuses for function calls."]
#[must_use]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum cudfError_t {
    CUDF_ERROR = 0,
    CUDF_SUCCESS = 1,
}
#[doc = " An opaque C handle for cuDF C API resources."]
pub type cudfResources_t = usize;
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum cudfTypeId_t {
    CUDF_TYPE_EMPTY = 0,
    CUDF_TYPE_INT8 = 1,
    CUDF_TYPE_INT16 = 2,
    CUDF_TYPE_INT32 = 3,
    CUDF_TYPE_INT64 = 4,
    CUDF_TYPE_UINT8 = 5,
    CUDF_TYPE_UINT16 = 6,
    CUDF_TYPE_UINT32 = 7,
    CUDF_TYPE_UINT64 = 8,
    CUDF_TYPE_FLOAT32 = 9,
    CUDF_TYPE_FLOAT64 = 10,
    CUDF_TYPE_BOOL8 = 11,
    CUDF_TYPE_TIMESTAMP_DAYS = 12,
    CUDF_TYPE_TIMESTAMP_SECONDS = 13,
    CUDF_TYPE_TIMESTAMP_MILLISECONDS = 14,
    CUDF_TYPE_TIMESTAMP_MICROSECONDS = 15,
    CUDF_TYPE_TIMESTAMP_NANOSECONDS = 16,
    CUDF_TYPE_DURATION_DAYS = 17,
    CUDF_TYPE_DURATION_SECONDS = 18,
    CUDF_TYPE_DURATION_MILLISECONDS = 19,
    CUDF_TYPE_DURATION_MICROSECONDS = 20,
    CUDF_TYPE_DURATION_NANOSECONDS = 21,
    CUDF_TYPE_DICTIONARY32 = 22,
    CUDF_TYPE_STRING = 23,
    CUDF_TYPE_LIST = 24,
    CUDF_TYPE_DECIMAL32 = 25,
    CUDF_TYPE_DECIMAL64 = 26,
    CUDF_TYPE_DECIMAL128 = 27,
    CUDF_TYPE_STRUCT = 28,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cudfDataType_t {
    pub id: cudfTypeId_t,
    pub scale: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of cudfDataType_t"][::std::mem::size_of::<cudfDataType_t>() - 8usize];
    ["Alignment of cudfDataType_t"][::std::mem::align_of::<cudfDataType_t>() - 4usize];
    ["Offset of field: cudfDataType_t::id"][::std::mem::offset_of!(cudfDataType_t, id) - 0usize];
    ["Offset of field: cudfDataType_t::scale"]
        [::std::mem::offset_of!(cudfDataType_t, scale) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cudfColumn {
    pub addr: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of cudfColumn"][::std::mem::size_of::<cudfColumn>() - 8usize];
    ["Alignment of cudfColumn"][::std::mem::align_of::<cudfColumn>() - 8usize];
    ["Offset of field: cudfColumn::addr"][::std::mem::offset_of!(cudfColumn, addr) - 0usize];
};
pub type cudfColumn_t = *mut cudfColumn;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cudfTable {
    pub addr: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of cudfTable"][::std::mem::size_of::<cudfTable>() - 8usize];
    ["Alignment of cudfTable"][::std::mem::align_of::<cudfTable>() - 8usize];
    ["Offset of field: cudfTable::addr"][::std::mem::offset_of!(cudfTable, addr) - 0usize];
};
pub type cudfTable_t = *mut cudfTable;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArrowSchema {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArrowDeviceArray {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArrowArray {
    _unused: [u8; 0],
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum cudfBinaryOp_t {
    CUDF_BINARY_OP_ADD = 0,
    CUDF_BINARY_OP_SUB = 1,
    CUDF_BINARY_OP_MUL = 2,
    CUDF_BINARY_OP_DIV = 3,
    CUDF_BINARY_OP_TRUE_DIV = 4,
    CUDF_BINARY_OP_FLOOR_DIV = 5,
    CUDF_BINARY_OP_MOD = 6,
    CUDF_BINARY_OP_EQUAL = 7,
    CUDF_BINARY_OP_NOT_EQUAL = 8,
    CUDF_BINARY_OP_LESS = 9,
    CUDF_BINARY_OP_GREATER = 10,
    CUDF_BINARY_OP_LESS_EQUAL = 11,
    CUDF_BINARY_OP_GREATER_EQUAL = 12,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cudfParquetReaderOptions {
    #[doc = " Path to the Parquet file (borrowed, caller owns)"]
    pub filepath: *const ::std::os::raw::c_char,
    #[doc = " Number of rows to skip from the start (0 = none)"]
    pub skip_rows: i64,
    #[doc = " Number of rows to read (-1 = all rows)"]
    pub num_rows: i64,
    #[doc = " NULL-terminated array of column names to read, or NULL for all"]
    pub columns: *mut *const ::std::os::raw::c_char,
    #[doc = " Number of entries in columns array (0 if columns is NULL)"]
    pub num_columns: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of cudfParquetReaderOptions"]
        [::std::mem::size_of::<cudfParquetReaderOptions>() - 40usize];
    ["Alignment of cudfParquetReaderOptions"]
        [::std::mem::align_of::<cudfParquetReaderOptions>() - 8usize];
    ["Offset of field: cudfParquetReaderOptions::filepath"]
        [::std::mem::offset_of!(cudfParquetReaderOptions, filepath) - 0usize];
    ["Offset of field: cudfParquetReaderOptions::skip_rows"]
        [::std::mem::offset_of!(cudfParquetReaderOptions, skip_rows) - 8usize];
    ["Offset of field: cudfParquetReaderOptions::num_rows"]
        [::std::mem::offset_of!(cudfParquetReaderOptions, num_rows) - 16usize];
    ["Offset of field: cudfParquetReaderOptions::columns"]
        [::std::mem::offset_of!(cudfParquetReaderOptions, columns) - 24usize];
    ["Offset of field: cudfParquetReaderOptions::num_columns"]
        [::std::mem::offset_of!(cudfParquetReaderOptions, num_columns) - 32usize];
};
pub type cudfParquetReaderOptions_t = *mut cudfParquetReaderOptions;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cudfParquetWriterOptions {
    #[doc = " Path to write the Parquet file (borrowed, caller owns)"]
    pub filepath: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of cudfParquetWriterOptions"]
        [::std::mem::size_of::<cudfParquetWriterOptions>() - 8usize];
    ["Alignment of cudfParquetWriterOptions"]
        [::std::mem::align_of::<cudfParquetWriterOptions>() - 8usize];
    ["Offset of field: cudfParquetWriterOptions::filepath"]
        [::std::mem::offset_of!(cudfParquetWriterOptions, filepath) - 0usize];
};
pub type cudfParquetWriterOptions_t = *mut cudfParquetWriterOptions;
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum cudfJoinType_t {
    CUDF_JOIN_INNER = 0,
    CUDF_JOIN_LEFT = 1,
    CUDF_JOIN_FULL = 2,
}
unsafe extern "C" {
    #[doc = " Returns a string describing the last seen error on this thread, or\n NULL if the last function succeeded."]
    pub fn cudfGetLastErrorText() -> *const ::std::os::raw::c_char;
    #[doc = " Sets a string describing an error seen on the thread. Passing NULL\n clears any previously seen error message."]
    pub fn cudfSetLastErrorText(error: *const ::std::os::raw::c_char);
    #[doc = " Create an initialized opaque resources handle."]
    #[must_use]
    pub fn cudfResourcesCreate(res: *mut cudfResources_t) -> cudfError_t;
    #[doc = " Destroy and deallocate an opaque resources handle."]
    #[must_use]
    pub fn cudfResourcesDestroy(res: cudfResources_t) -> cudfError_t;
    #[doc = " Set cudaStream_t on a resources handle."]
    #[must_use]
    pub fn cudfStreamSet(res: cudfResources_t, stream: cudaStream_t) -> cudfError_t;
    #[doc = " Get the cudaStream_t from a resources handle."]
    #[must_use]
    pub fn cudfStreamGet(res: cudfResources_t, stream: *mut cudaStream_t) -> cudfError_t;
    #[doc = " Synchronize the current CUDA stream on a resources handle."]
    #[must_use]
    pub fn cudfStreamSync(res: cudfResources_t) -> cudfError_t;
    #[doc = " Get the version of the cuDF library."]
    #[must_use]
    pub fn cudfVersionGet(
        major: *mut u16,
        minor: *mut u16,
        patch: *mut u16,
    ) -> cudfError_t;
    #[doc = " Destroy a column handle."]
    #[must_use]
    pub fn cudfColumnDestroy(col: cudfColumn_t) -> cudfError_t;
    #[doc = " Allocate an empty column handle (no data)."]
    #[must_use]
    pub fn cudfColumnCreate(col: *mut cudfColumn_t) -> cudfError_t;
    #[doc = " Get the data type of a column."]
    #[must_use]
    pub fn cudfColumnGetType(col: cudfColumn_t, r#type: *mut cudfDataType_t) -> cudfError_t;
    #[doc = " Get the number of rows in a column."]
    #[must_use]
    pub fn cudfColumnGetSize(col: cudfColumn_t, size: *mut i64) -> cudfError_t;
    #[doc = " Get the null count of a column."]
    #[must_use]
    pub fn cudfColumnGetNullCount(col: cudfColumn_t, null_count: *mut i64) -> cudfError_t;
    #[doc = " Destroy a table handle."]
    #[must_use]
    pub fn cudfTableDestroy(table: cudfTable_t) -> cudfError_t;
    #[doc = " Allocate an empty table handle (no columns)."]
    #[must_use]
    pub fn cudfTableCreate(table: *mut cudfTable_t) -> cudfError_t;
    #[doc = " Get the number of columns in a table."]
    #[must_use]
    pub fn cudfTableGetNumColumns(table: cudfTable_t, num_cols: *mut i32) -> cudfError_t;
    #[doc = " Get the number of rows in a table."]
    #[must_use]
    pub fn cudfTableGetNumRows(table: cudfTable_t, num_rows: *mut i64) -> cudfError_t;
    #[doc = " Get a column from a table by index."]
    #[must_use]
    pub fn cudfTableGetColumn(
        table: cudfTable_t,
        index: i32,
        col: *mut cudfColumn_t,
    ) -> cudfError_t;
    #[doc = " Import an Arrow device array into a cuDF table."]
    #[must_use]
    pub fn cudfTableFromArrow(
        schema: *mut ArrowSchema,
        input: *mut ArrowDeviceArray,
        stream: cudaStream_t,
        table: *mut cudfTable_t,
    ) -> cudfError_t;
    #[doc = " Export a cuDF table to an Arrow device array."]
    #[must_use]
    pub fn cudfTableToArrow(
        table: cudfTable_t,
        schema: *mut ArrowSchema,
        output: *mut ArrowDeviceArray,
        stream: cudaStream_t,
    ) -> cudfError_t;
    #[doc = " Import an Arrow device array into a cuDF column."]
    #[must_use]
    pub fn cudfColumnFromArrow(
        schema: *mut ArrowSchema,
        input: *mut ArrowDeviceArray,
        stream: cudaStream_t,
        col: *mut cudfColumn_t,
    ) -> cudfError_t;
    #[doc = " Export a cuDF column to an Arrow device array."]
    #[must_use]
    pub fn cudfColumnToArrow(
        col: cudfColumn_t,
        schema: *mut ArrowSchema,
        output: *mut ArrowDeviceArray,
        stream: cudaStream_t,
    ) -> cudfError_t;
    #[doc = " Import an Arrow host array into a cuDF table."]
    #[must_use]
    pub fn cudfTableFromArrowHost(
        schema: *mut ArrowSchema,
        input: *mut ArrowArray,
        stream: cudaStream_t,
        table: *mut cudfTable_t,
    ) -> cudfError_t;
    #[doc = " Export a cuDF table to an Arrow host array."]
    #[must_use]
    pub fn cudfTableToArrowHost(
        table: cudfTable_t,
        schema: *mut ArrowSchema,
        output: *mut ArrowArray,
        stream: cudaStream_t,
    ) -> cudfError_t;
    #[doc = " Allocate and zero-initialize a Parquet reader options struct."]
    #[must_use]
    pub fn cudfParquetReaderOptionsCreate(
        opts: *mut cudfParquetReaderOptions_t,
    ) -> cudfError_t;
    #[doc = " Free a Parquet reader options struct."]
    #[must_use]
    pub fn cudfParquetReaderOptionsDestroy(opts: cudfParquetReaderOptions_t) -> cudfError_t;
    #[doc = " Read a Parquet file into a cuDF table."]
    #[must_use]
    pub fn cudfParquetRead(
        opts: cudfParquetReaderOptions_t,
        stream: cudaStream_t,
        table: *mut cudfTable_t,
    ) -> cudfError_t;
    #[doc = " Allocate and zero-initialize a Parquet writer options struct."]
    #[must_use]
    pub fn cudfParquetWriterOptionsCreate(
        opts: *mut cudfParquetWriterOptions_t,
    ) -> cudfError_t;
    #[doc = " Free a Parquet writer options struct."]
    #[must_use]
    pub fn cudfParquetWriterOptionsDestroy(opts: cudfParquetWriterOptions_t) -> cudfError_t;
    #[doc = " Write a cuDF table to a Parquet file."]
    #[must_use]
    pub fn cudfParquetWrite(
        table: cudfTable_t,
        opts: cudfParquetWriterOptions_t,
        stream: cudaStream_t,
    ) -> cudfError_t;
    #[doc = " Perform a binary operation on two columns."]
    #[must_use]
    pub fn cudfBinaryOpColumns(
        lhs: cudfColumn_t,
        rhs: cudfColumn_t,
        op: cudfBinaryOp_t,
        output_type: cudfDataType_t,
        stream: cudaStream_t,
        result: *mut cudfColumn_t,
    ) -> cudfError_t;
    #[doc = " Perform a join operation on two tables."]
    #[must_use]
    pub fn cudfTableJoin(
        left: cudfTable_t,
        right: cudfTable_t,
        left_on: *const i32,
        right_on: *const i32,
        num_keys: i32,
        join_type: cudfJoinType_t,
        stream: cudaStream_t,
        result: *mut cudfTable_t,
    ) -> cudfError_t;
}
